--- a/src/app/modules/dashboard/components/barchart/barchart.component.scss
+++ b/src/app/modules/dashboard/components/barchart/barchart.component.scss
@@ -2,3 +2,12 @@
 .ngx-charts g .grid-panel.odd rect {
   fill: none;
 }
+
+.wrapper-message {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: aliceblue;
+  color: #6d6d6d;
+}
