--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <app-toolbar></app-toolbar>
 
-<mat-drawer-container class="example-container">
+<mat-drawer-container class="example-container" style="background-color: #fff;">
 
     
     <mat-drawer #drawer [opened]="true" class="example-sidenav" mode="side">
@@ -9,7 +9,7 @@
                 <mat-icon>account_circle</mat-icon>
             </div>
             <div>
-                <h3>Anderson Bengolea</h3>
+                <h3></h3>
             </div>
         </div>
         <mat-divider></mat-divider>
