--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -7,9 +7,9 @@
               <span>Sistema de notas</span>
         </div>
       <div>
-        <button mat-icon-button class="btn-logout">
+        <a mat-icon-button class="btn-logout" (click)="logout()">
             <mat-icon>logout</mat-icon>
-          </button>
+        </a>
       </div>
       
     </mat-toolbar>
