--- a/src/app/modules/aulas/pages/aulas/aulas.component.html
+++ b/src/app/modules/aulas/pages/aulas/aulas.component.html
@@ -7,20 +7,23 @@
     <mat-divider class="divider"></mat-divider>
   
   
-  <div *ngFor="let aula of aulasPorGrado; let i = index">
-    <h3 class="grado-titulo">{{aula[0].grado.nombre}} DE PRIMARIA</h3>
-    <div class="cards">
-      <mat-card class="example-card" *ngFor="let aula of aula">
-        <h3><mat-icon>menu_book</mat-icon> {{aula.nombre}} {{aula.seccion}}</h3>
-        <mat-divider></mat-divider>
-        <mat-card-content>
-        </mat-card-content>
-        <mat-card-actions>
-          <button mat-button color="primary" [routerLink]="[aula.aula_id,'clases']">Ingresar</button>
-        </mat-card-actions>
-      </mat-card>
+  <div *ngFor="let grado of grados; let i = index">
+    <div *ngIf="grado.aulas">
+      <h3 class="grado-titulo">{{grado.nombre}} </h3>
+      <div class="cards">
+        <mat-card class="example-card" *ngFor="let aula of grado.aulas ; let j = index">
+          <h3><mat-icon>menu_book</mat-icon> {{aula.nombre}} {{aula.seccion}}</h3>
+          <mat-divider></mat-divider>
+          <mat-card-content>
+          </mat-card-content>
+          <mat-card-actions>
+            <button mat-button color="primary" [routerLink]="[aula.codigo,'clases']">Ingresar</button>
+          </mat-card-actions>
+        </mat-card>
+      </div>
+      
     </div>
-    <mat-divider *ngIf="i < aulasPorGrado.length - 1" class="divider"></mat-divider>
+    <mat-divider *ngIf="i < grados.length - 1" class="divider"></mat-divider>
   </div>
   
 
