--- a/src/app/modules/aulas/pages/aulas/aulas.component.scss
+++ b/src/app/modules/aulas/pages/aulas/aulas.component.scss
@@ -3,6 +3,7 @@ $primary-color: #3f51b5;
 :host {
     .container {
         padding: 20px;
+        height: 100%;
 
         .titulo {
           display: flex;
