--- a/src/app/modules/aulas/pages/registro-notas/registro-notas.component.scss
+++ b/src/app/modules/aulas/pages/registro-notas/registro-notas.component.scss
@@ -40,7 +40,7 @@ $primary-color: #3f51b5;
 
         table {
             width: 100%;
-
+            overflow: auto;
             
 
             .mat-header-row {
@@ -53,17 +53,20 @@ $primary-color: #3f51b5;
             }
             .mat-column-Nombres {
                 border-right: 1px solid currentColor;
+                min-width: 400px;
+                
             }
 
              .mat-column-Sem-1, .mat-column-Sem-2,
              .mat-column-Sem-3, .mat-column-Sem-4, .mat-column-Sem-5,
              .mat-column-Sem-6, .mat-column-Sem-7, .mat-column-Sem-8,
              .mat-column-Tarea-1, .mat-column-Tarea-2, .mat-column-Tarea-3, .mat-column-Tarea-4,
+             .mat-column-Tarea-5, .mat-column-Tarea-6, .mat-column-Tarea-7, .mat-column-Tarea-8,
               .mat-column-Examen, .mat-column-Promedio
              {
                 border-right: 1px solid currentColor;
                 text-align: center;
-                width: 55px;
+                min-width: 55px;
             }
 
             td {
@@ -101,6 +104,9 @@ $primary-color: #3f51b5;
 
     .buttons {
         margin-top: 15px;
+        button {
+            margin-right: 10px;
+        }
     }
 }
 
@@ -110,4 +116,8 @@ $primary-color: #3f51b5;
 
  ::ng-deep .mat-form-field-appearance-outline .mat-form-field-infix {
     padding: 5px 0 8px 0;
+}
+
+.desaprobado {
+    color: red;
 }
