--- a/src/app/modules/auth/pages/auth-page/auth-page.component.html
+++ b/src/app/modules/auth/pages/auth-page/auth-page.component.html
@@ -9,24 +9,29 @@
       </mat-card-title>
     </mat-card-header>
     <mat-card-content>
+      <form [formGroup]="login_form">
         <div class="input">
             <mat-form-field appearance="outline">
                 <mat-label>Usuario</mat-label>
-                <input matInput >
+                <input matInput formControlName="usuario" >
                 <mat-icon matSuffix>person</mat-icon>
             </mat-form-field>
         </div>
         <div class="input">
             <mat-form-field appearance="outline">
                 <mat-label>Contraseña</mat-label>
-                <input matInput type="password" >
+                <input matInput type="password" formControlName="password">
                 <mat-icon matSuffix>vpn_key</mat-icon>
             </mat-form-field>
+            
         </div>
+
+        <p style="color: red; text-align: center;" *ngIf="mensajeError">{{mensajeError}}</p>
+
         <div class="input">
             <button mat-raised-button color="primary" (click)="login()">Ingresar</button>
         </div>
-        
+      </form>
     </mat-card-content>
 </mat-card>
 </div>
