--- a/src/app/modules/bimestres/pages/bimestres/bimestres.component.html
+++ b/src/app/modules/bimestres/pages/bimestres/bimestres.component.html
@@ -18,10 +18,10 @@
             <th mat-header-cell *matHeaderCellDef> Estado </th>
             <td mat-cell *matCellDef="let bimestre">
               <mat-chip-list aria-label="Dog selection">
-                <mat-chip color="primary" selected *ngIf="bimestre.activo">
+                <mat-chip color="primary" selected *ngIf="bimestre.estado">
                   Activo
                 </mat-chip>
-                <mat-chip color="accent" selected *ngIf="!bimestre.activo">
+                <mat-chip color="accent" selected *ngIf="!bimestre.estado">
                   Inactivo
                 </mat-chip>
               </mat-chip-list>
@@ -32,7 +32,7 @@
       
         <ng-container matColumnDef="acciones">
           <th mat-header-cell *matHeaderCellDef> Acciones</th>
-          <td mat-cell *matCellDef="let bimestre"> <button mat-stroked-button color="accent"><mat-icon>edit</mat-icon></button></td>
+          <td mat-cell *matCellDef="let bimestre"> <button mat-stroked-button color="accent"  (click)="openDialogActualizar(bimestre)"><mat-icon>edit</mat-icon></button></td>
         </ng-container>
       
       
