--- a/src/app/modules/cursos/pages/cursos/cursos.component.html
+++ b/src/app/modules/cursos/pages/cursos/cursos.component.html
@@ -17,7 +17,7 @@
       
         <ng-container matColumnDef="acciones">
           <th mat-header-cell *matHeaderCellDef> Acciones</th>
-          <td mat-cell *matCellDef="let curso"> <button mat-stroked-button color="accent"><mat-icon>edit</mat-icon></button></td>
+          <td mat-cell *matCellDef="let curso"> <button mat-stroked-button color="accent" (click)="openDialogActualizar(curso)"><mat-icon>edit</mat-icon></button></td>
         </ng-container>
       
       
