--- a/src/app/modules/dashboard/components/barchart/barchart.component.html
+++ b/src/app/modules/dashboard/components/barchart/barchart.component.html
@@ -1,5 +1,5 @@
 <div style="width: 100%; height: 200px">
-    <ngx-charts-bar-vertical-2d
+    <ngx-charts-bar-vertical-2d *ngIf="reporteNotas"
     [results]="multi"
     [gradient]="gradient"
     [xAxis]="showXAxis"
@@ -11,6 +11,10 @@
     [customColors]="colorScheme"
     [yAxisLabel]="yAxisLabel"
     [legendTitle]="legendTitle"
-    (select)="onSelect($event)">
+    [noBarWhenZero]="false"
+    (select)="onSelect()">
   </ngx-charts-bar-vertical-2d>
+  <div class="wrapper-message" *ngIf="!reporteNotas">
+    <h2>Realice una búsqueda para mostrar datos.</h2>
+  </div>
 </div>
