--- a/src/app/modules/dashboard/components/linechart/linechart.component.html
+++ b/src/app/modules/dashboard/components/linechart/linechart.component.html
@@ -1,5 +1,5 @@
-<div style="width: 100%; height: 250px">
-    <ngx-charts-line-chart
+<div style="width: 100%; height: 250px;" *ngIf="reporteNotaParticipacionEstudiante || reporteNotaTareaEstudiante">
+    <ngx-charts-line-chart 
   [legend]="legend"
   [showXAxisLabel]="showXAxisLabel"
   [showYAxisLabel]="showYAxisLabel"
@@ -12,4 +12,8 @@
   [roundDomains]="true"
   >
 </ngx-charts-line-chart>
+
+</div>
+<div class="wrapper-message" *ngIf="!reporteNotaParticipacionEstudiante && !reporteNotaTareaEstudiante">
+  <h2>Realice una búsqueda para mostrar datos.</h2>
 </div>
