--- a/src/app/modules/dashboard/pages/dashboard/dashboard.component.scss
+++ b/src/app/modules/dashboard/pages/dashboard/dashboard.component.scss
@@ -1,5 +1,27 @@
+$primary-color: #3f51b5;
+$accent-color: #ff4081;
+
 .container {
     padding: 20px;
+
+    .title {
+        margin-top: 20px;
+        display: flex;
+        justify-content: space-between;
+        div {
+            display: flex;
+            align-items: center;
+        }
+        
+        .combos-box {
+            display: flex;
+            div {
+                margin-left: 10px;
+            }
+        }
+
+        
+    }
 
     .card-title {
         display: flex;
@@ -7,17 +29,49 @@
         width: 100%;
     }
 
-    .card-line {
-        margin-bottom: 20px;
-    }
+    // .card-line {
+        
+    // }
 
     .cards {
-        display: flex;
-        justify-content: space-between;
+        width: 100%;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 20px;
+        margin-top: 20px;
 
         .card {
-            width: 47%;
+            // width: 47%;
             height: 250px;
+        }
+    }
+
+    .cards-info {
+        width: 100%;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        gap: 20px;
+
+        .card {
+            height: 70px;
+            
+            mat-card-content {
+                display: flex;
+                justify-content: space-around;
+                align-items: center;
+                height: 100%;
+
+                h2 {
+                    margin: 0;
+                    text-align: center;
+                }
+
+                mat-icon {
+                    font-size: 50px;
+                    color: $primary-color;
+                }
+            }
+
         }
     }
 
