--- a/src/app/modules/grados/pages/grados/grados.component.html
+++ b/src/app/modules/grados/pages/grados/grados.component.html
@@ -17,7 +17,7 @@
       
         <ng-container matColumnDef="acciones">
           <th mat-header-cell *matHeaderCellDef> Acciones</th>
-          <td mat-cell *matCellDef="let grado"> <button mat-stroked-button color="accent"><mat-icon>edit</mat-icon></button></td>
+          <td mat-cell *matCellDef="let grado"> <button mat-stroked-button color="accent" (click)="openDialogActualizar(grado)"><mat-icon>edit</mat-icon></button></td>
         </ng-container>
       
       
